--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
 	<div class = "container">
 
 		<header class="flex-col">
-				<nav class="flex maxwidt1140">
+				<nav class="flex ">
 					<img src="resources/img/logo-white.png" alt="Omnifood Logo" class="logo">
+					<img src="resources/img/logo.png" alt="Omnifood Logo" class="logo-black">
 					<ul class="main-nav">
 						<li><a href="#">Food delivery</a></li>
 						<li><a href="#">How it works</a></li>
@@ -33,7 +34,7 @@
 				</div>
 				
 		</header>
-		<section class="flex-col section-features">
+		<section class="flex-col section-features js--section-features">
 			<div class="maxwidt1140">
 				
 			<h2>Get food fast &mdash; not fast food.</h2>
@@ -429,5 +430,10 @@
 			</div>
 		</footer>
 	</div>
+
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script src="resources/js/script.js"></script>
+	<script src="vendors/js/jquery.waypoints.min.js"></script>
 </body>
 </html>
