--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="resources/css/style2.css">
 	<link rel="stylesheet" type="text/css" href="resources/css/queries.css">
 	<link rel="stylesheet" type="text/css" href="vendors/css/ionicons.min.css">
+	<link rel="stylesheet" type="text/css" href="vendors/css/animate.css">
 	<link href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400" rel="stylesheet">
 	<title>Omnifood</title>
 
@@ -40,7 +41,7 @@
 			<h2>Get food fast &mdash; not fast food.</h2>
 			<p class="long-copy">Hello, we’re Omnifood, your new premium food delivery service. We know you’re always busy. No time for cooking. So let us take care of that, we’re really good at it, we promise!</p>
 			</div>
-			<div class="flex feature-list maxwidt1140">
+			<div class="flex feature-list maxwidt1140 js--wp-1">
 				<div class="box" >
 					<i class="ion-ios-infinite-outline icon-big"></i>
 					
@@ -124,7 +125,7 @@
 			</div>
 			<div class="flex">
 				<div class="steps-box maxwidt570">
-					<img src="resources/img/app-iPhone.png" alt="Omnifood app on iPhone" class="app-screen">
+					<img src="resources/img/app-iPhone.png" alt="Omnifood app on iPhone" class="app-screen js--wp-2">
 				</div>
 				<div class="flex-col steps-box maxwidt570">
 					<div class="works-steps flex">
@@ -153,7 +154,7 @@
 				<h2>We're currently in these cities</h2>
 
 			</div>
-			<div class="flex">
+			<div class="flex js--wp-3">
 				<div class="box">
 					<img src="resources/img/lisbon-3.jpg">
 					<h3>Lisbon</h3>
@@ -257,7 +258,7 @@
 				</div>
 
 				<div class="flex">
-					<div class="flex-element">
+					<div class="flex-element js--wp-4">
 
 					<div class="plan-box">
 						<div>
