--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">	
 
 	<link rel="stylesheet" type="text/css" href="vendors/css/normalize.css">	
-	<link rel="stylesheet" type="text/css" href="resources/css/style2.css">
+	<link rel="stylesheet" type="text/css" href="resources/css/style.css">
 	<link rel="stylesheet" type="text/css" href="resources/css/queries.css">
 	<link rel="stylesheet" type="text/css" href="vendors/css/ionicons.min.css">
 	<link rel="stylesheet" type="text/css" href="vendors/css/animate.css">
@@ -20,12 +20,15 @@
 				<nav class="flex ">
 					<img src="resources/img/logo-white.png" alt="Omnifood Logo" class="logo">
 					<img src="resources/img/logo.png" alt="Omnifood Logo" class="logo-black">
-					<ul class="main-nav">
+					<ul class="main-nav js--main-nav">
 						<li><a href="#features">Food delivery</a></li>
 						<li><a href="#work">How it works</a></li>
 						<li><a href="#cities">Our cities</a></li>
 						<li><a href="#sign">Sign up</a></li>
 					</ul>
+
+					<a class = "mobile-nav-icon "><i class="ion-navicon-round js--nav-icon"></i></a>
+
 
 				</nav>
 				<div class="hero-text-box maxwidt1140">
@@ -273,6 +276,7 @@
 								<li><i class="ion-ios-checkmark-empty icon-small"></i>Access to newest creations</li>
 								<li><i class="ion-ios-checkmark-empty icon-small"></i>Free delivery</li>
 							</ul>
+
 						</div>
 						<div>
 							<a href="#" class="btn btn-full">Sign up now</a>
